#13 Fix signin box on Firefox

--- a/src/public/asset/css/style.scss
+++ b/src/public/asset/css/style.scss
@@ -30,37 +30,15 @@ footer {
 // Helpers
 .d-separator {
   /*border-top: 1px solid #e5e5e5;*/
-  border: none;
-  height: 60px;
-  position: relative;
-  display: block;
-  text-align: center;
-  overflow: hidden;
+  width:100%;
+  text-align:center;
+  border-bottom: 1px solid #e5e5e5;
+  line-height:0.1em;
+  margin:10px 0 20px;
 
-  div.line {
-    height: 1px;
-    background-color: #e5e5e5;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    width: 100%;
-  }
-
-  div.text {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    line-height: 56px;
-
-    span {
-      display: inline-block;
-      padding: 0 5px;
-      background: #ffffff;
-    }
+  span {
+    background:#fff;
+    padding:0 10px;
   }
 }
 
